--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+
+* {
+  box-sizing: border-box;
+}
+
+.header {
+  border: 1px solid red;
+  padding: 15px;
+}
+
+.menu {
+  width: 25%;
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
+}
+
+.main {
+  width: 75%;
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
 }
 
 h1{font-size:35px;}
