--- a/style.css
+++ b/style.css
@@ -39,4 +39,4 @@ body {background:#ffffff;}
   font-size:18px;
   float: left;
   padding: 0px;
-  border: 1px solid red;}
+  border: 1px solid black;}
