--- a/style.css
+++ b/style.css
@@ -41,8 +41,17 @@ body {background:#ffffff;}
   padding: 0px;
   border: 1px solid black;}
 
-button {
-  font-size:18px;
-  float: left;
-  padding: 0px;
-  border: 1px solid black;}
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {border-radius: 2px;}
