--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {background:#ffffff;}
   font-size:18px;
   float: left;
   padding: 0px;
-  border: 1px solid black;}
+}
 
 .button {
   background-color: #4CAF50; /* Green */
@@ -54,4 +54,4 @@ body {background:#ffffff;}
   cursor: pointer;
 }
 
-.button1 {border-radius: 2px;}
+.button1 {border-radius: 3px;}
