--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ body {background:#ffffff;}
   padding: 0px;
 }
 
+#questions {
+  font-size:18px;
+  float: left;
+  padding: 0px;
+}
+
 .button {
   background-color: #4CAF50; /* Green */
   border: none;
