--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   border: 1px solid red;
 }
 
-h1{font-size:35px;}
+h1{font-size:35px; background-color: #cccccc; /* Gray */; border: 1px solid black;}
 h2{font-size:30px;}
 h3{font-size:25px;}
 p {font-size:16px;}
