--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
 * {
   box-sizing: border-box;
-}
+  margin: 0;
 
 .header {
   border: 1px solid red;
   padding: 15px;
+  background: #cccccc;
 }
 
 .menu {
@@ -28,7 +29,7 @@
   border: 1px solid red;
 }
 
-h1{font-size:35px; background-color: #cccccc; /* Gray */; border: 1px solid black;}
+h1{font-size:35px;}
 h2{font-size:30px;}
 h3{font-size:25px;}
 p {font-size:16px;}
