--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   border: 1px solid red;
   padding: 15px;
   background: #cccccc;
+  clear: both;
 }
 
 .menu {
@@ -34,6 +35,7 @@
   float: left;
   padding: 15px;
   border: 1px solid red;
+  background: #ffffff;
 }
 
 h1{font-size:35px;}
@@ -41,7 +43,7 @@ h2{font-size:30px;}
 h3{font-size:25px;}
 p {font-size:16px;}
 
-body {background:#ffffff;}
+body {background: #ffffff;}
 
 #quotes {
   font-size:18px;
