--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   background: #cccccc;
   clear: both;
   margin-top: auto;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .info {
