--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 h1{font-size:35px;}
 h2{font-size:30px;}
 h3{font-size:25px;}
-p {font-size:16px;}
+p {font-size:16px; font-face: verdana;}
 
 body {background: #ffffff;}
 
@@ -73,4 +73,4 @@ body {background: #ffffff;}
   cursor: pointer;
 }
 
-.button1 {border-radius: 6px;}
+.button1 {border-radius: 6px; clear: both;}
