--- a/style.css
+++ b/style.css
@@ -73,4 +73,4 @@ body {background: #ffffff;}
   cursor: pointer;
 }
 
-.button1 {border-radius: 6px;}
+.button1 {border-radius: 6px; border-top: 20px;}
