--- a/style.css
+++ b/style.css
@@ -64,13 +64,14 @@ body {background: #ffffff;}
   background-color: #004de6; 
   border: none;
   color: white;
-  padding: 10px;
+  padding: 30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+  float: left;
 }
 
-.button1 {border-radius: 6px; border-top: 20px;}
+.button1 {border-radius: 6px;}
