--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {background: #ffffff;}
 
 .button {
   background-color: #004de6; 
-  border: none;
+  border: 1px solid black;
   color: white;
   padding: 30px;
   text-align: center;
