--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {background: #ffffff;}
 #quotes {
   font-size:18px;
   float: left;
-  padding: 0px 0px 50px 0px;
+  padding: 0px;
 }
 
 .button {
