--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ body {background: #ffffff;}
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 34px 2px;
+  margin: 4px 2px;
   cursor: pointer;
   float: left;
 }
 
-.button1 {border-radius: 6px;}
+.button1 {border-radius: 6px; margin: 30px;}
