--- a/style.css
+++ b/style.css
@@ -63,15 +63,13 @@ body {background: #ffffff;}
 
 .button {
   background-color: #004de6; 
-  border: 0px;
+  border: none;
   color: white;
-  padding: 0px;
+  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
 }
 
-.button1 {border-radius: 6px; margin: 30px 0px; float: left;}
+.button1 {border-radius: 6px; clear: both; float: left;}
