--- a/style.css
+++ b/style.css
@@ -40,23 +40,7 @@
   padding: 0;
 }
 
-.main top {
-  width: 75%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-  background: #ffffff;
-}
-
-.main middle {
-  width: 75%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-  background: #ffffff;
-}
-
-.main bottom {
+.main {
   width: 75%;
   float: left;
   padding: 15px;
@@ -88,4 +72,4 @@ body {background: #ffffff;}
   font-size: 16px;
 }
 
-.button1 {border-radius: 6px; clear: both; float: left;}
+.button1 {border-radius: 6px; clear: left; float: left;}
