--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 25%;
+  width: 100%;
   background-color: #f1f1f1;
+  border: 1px solid black;
 }
 
 li a {
