--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   background: #99bbff;
   clear: both;
   margin-top: auto;
-  position: fixed;
+  position: auto;
   left: 0;
   bottom: 0;
   width: 100%;
