--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
   padding: 15px;
   border: 1px solid red;
   background: #ffffff;
+  height: 100%;
 }
 
 h1{font-size:35px; border: 1px solid red; display: inline; float: left;}
