--- a/style.css
+++ b/style.css
@@ -108,9 +108,9 @@ li a:hover {
 
 
 .item1 { grid-area: header; }
-.item2 { grid-area: menu;  width: 25%;}
+.item2 { grid-area: menu; }
 .item3 { grid-area: main; }
-.item4 { grid-area: right; width: 25%;}
+.item4 { grid-area: right; }
 .item5 { grid-area: footer; }
 
 .grid-container {
