--- a/style.css
+++ b/style.css
@@ -1,28 +1,53 @@
 
 * {
   box-sizing: border-box;
-  margin: 0px;
-  font-family: verdana, Arial, sans-serif;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+html {
+  font-family: "Lucida Sans", sans-serif;
 }
 
 .header {
-  border-bottom: 1px solid black;
+  background-color: #9933cc;
+  color: #ffffff;
   padding: 15px;
-  background: #99bbff;
-  height: 180px;
 }
-
 .footer {
-  border: 1px solid red;
+  background-color: #9933cc;
+  color: #ffffff;
   padding: 15px;
-  background: #99bbff;
   clear: both;
   margin-top: auto;
   left: 0;
   bottom: 0;
   width: 100%;
   height: auto;
-  position: absolute;
+  position: auto;
+  
 }
 
 .info {
@@ -107,26 +132,3 @@ li a:hover {
 }
 
 
-.item1 { grid-area: header; }
-.item2 { grid-area: menu; }
-.item3 { grid-area: main; }
-.item4 { grid-area: right; }
-.item5 { grid-area: footer; }
-
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'header header header header header header'
-    'menu main main main right right'
-    'menu footer footer footer footer footer';
-  grid-gap: 0px;
-  background-color: #2196F3;
-  padding: 10px;
-}
-
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
