--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-<!--
+*/
 
 * {
   box-sizing: border-box;
@@ -131,8 +131,7 @@ li a:hover {
   background-color: #555;
   color: white;
 }
-
--->
+*/
 
 * {
   box-sizing: border-box;
