--- a/style.css
+++ b/style.css
@@ -166,12 +166,14 @@ html {
 }
 
 .header {
-  background-color: #9933cc;
+  background-color: #cccccc;
   color: #ffffff;
   padding: 15px;
+  width: 100%;
+  height: 100px;
 }
 .footer {
-  background-color: #9933cc;
+  background-color: #cccccc;
   color: #ffffff;
   padding: 15px;
   clear: both;
@@ -179,7 +181,7 @@ html {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: auto;
+  height: 100px;
   position: auto;
   
 }
