--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {height: 100%;}
 
+header {background-color: #cccccc; height: 180px;}
+
 body {min-height: 100%; display: flex; flex-direction: column;}
 
-footer {margin-top: auto;}
+footer {margin-top: auto; background-color: #cccccc;}
