--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {height: 100%;}
 
-header {background-color: #cccccc; height: 180px;}
+header {background-color: #cccccc; height: 180px; border: 1px solid red; margin: 0px;}
 
 body {min-height: 100%; display: flex; flex-direction: column;}
 
