--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@ header {background-color: #cccccc; height: 180px; border: 1px solid red; margin:
 body {min-height: 100%; display: flex; flex-direction: column;}
 
 footer {margin-top: auto; background-color: #cccccc;}
+
+h1{font-size:35px; border: 1px solid red; display: inline; float: left;}
+h2{font-size:30px;}
+h3{font-size:25px;}
+p {font-size:16px;}
