--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ header {background-color: #cccccc; height: 180px; border: 1px solid red; margin:
 
 body {min-height: 100%; display: flex; flex-direction: column;}
 
+main {float: right; height: auto;}
+
 footer {margin-top: auto; background-color: #cccccc;}
 
 h1{font-size:35px; border: 1px solid red; display: inline; float: left;}
