--- a/style.css
+++ b/style.css
@@ -10,7 +10,26 @@ header {background-color: #cccccc; height: 180px; border: 1px solid red; margin:
 
 body {min-height: 100%; display: flex; flex-direction: column;}
 
-main {float: right; height: auto;}
+.menu {
+  width: 25%;
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  float: right; height: auto;
+    width: 75%;
+  float: right;
+  padding: 15px;
+  border: 1px solid red;
+}
 
 footer {margin-top: auto; background-color: #cccccc;}
 
