--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
 
 
 
-header {background-color: #cccccc; height: 180px; border: 1px solid red; margin: 0px;}
+header {  
+  border-bottom: 1px solid black;
+  padding: 15px;
+  background: #99bbff;
+  height: 180px;}
 
 body {min-height: 100%; display: flex; flex-direction: column;}
 
