--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   background: #99bbff;
   height: 180px;}
 
-body {min-height: 100%; display: flex; flex-direction: column;}
+body {min-height: 100%; display: flex;}
 
 .menu {
   width: 25%;
