--- a/style.css
+++ b/style.css
@@ -1,109 +1,56 @@
-
-  
-
 * {
   box-sizing: border-box;
-  margin: 0px;
-  font-family: verdana, Arial, sans-serif;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
 .header {
-  border-bottom: 1px solid black;
-  padding: 15px;
-  background: #99bbff;
-  height: 180px;
-  width: 100%;
-}
-
-.footer {
-  border: 1px solid red;
-  padding: 15px;
-  background: #99bbff;
-  clear: both;
-  margin-top: auto;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  position: absolute;
-}
-
-.info {
- float: right; 
-}
-
-.menu {
-  width: 25%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-}
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.main {
-  width: 75%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-  background: #ffffff;
-}
-
-h1{font-size:35px; border: 1px solid red; display: inline; float: left;}
-h2{font-size:30px;}
-h3{font-size:25px;}
-p {font-size:16px;}
-
-body {background: #ffffff; min-height: 100%; display: flex;}
-
-#quotes {
-  font-size:18px;
-  float: left;
-  padding: 0px;
-  margin: 30px 0px;
-}
-
-.button {
-  background-color: #004de6; 
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.button1 {border-radius: 6px; clear: left; float: left;}
-
-#logo {
-  float: right;
-  border: 1px;
-  align: right;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
   background-color: #f1f1f1;
-  border: 1px solid black;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
 }
 
-li a {
-  display: block;
-  color: #000;
-  padding: 0px;
-  text-decoration: none;
+/* Container for flexboxes */
+.row {
+  display: -webkit-flex;
+  display: flex;
 }
 
-/* Change the link color on hover */
-li a:hover {
-  background-color: #555;
-  color: white;
+/* Create three unequal columns that sits next to each other */
+.column {
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Left and right column */
+.column.side {
+   -webkit-flex: 1;
+   -ms-flex: 1;
+   flex: 1;
+}
+
+/* Middle column */
+.column.middle {
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+}
+
+/* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
 }
