--- a/style.css
+++ b/style.css
@@ -56,3 +56,24 @@ body {
     flex-direction: column;
   }
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  border: 1px solid black;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 0px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
