--- a/style.css
+++ b/style.css
@@ -77,3 +77,16 @@ li a:hover {
   background-color: #555;
   color: white;
 }
+
+.button {
+  background-color: #004de6; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button1 {border-radius: 6px; clear: left; float: left;}
