--- a/style.css
+++ b/style.css
@@ -58,23 +58,20 @@ body {
 }
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   width: 100%;
-  background-color: #f1f1f1;
-  border: 1px solid black;
-}
+  }
 
 li a {
   display: block;
   color: #000;
-  padding: 0px;
+  padding: 10px;
   text-decoration: none;
 }
 
 /* Change the link color on hover */
 li a:hover {
-  background-color: #555;
   color: white;
 }
 
