--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
   background-color: #f1f1f1;
   padding: 10px;
   text-align: center;
+  height: 100px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
