--- a/style.css
+++ b/style.css
@@ -90,3 +90,8 @@ li a:hover {
 }
 
 .button1 {border-radius: 6px; clear: left; float: left;}
+
+h1{font-size:35px;}
+h2{font-size:30px;}
+h3{font-size:25px;}
+p {font-size:16px;}
