--- a/style.css
+++ b/style.css
@@ -97,12 +97,12 @@ h3{font-size:25px;}
 p {font-size:16px;}
 
 .accordion {
-  background-color: #eee;
+  background-color: #aaa;
   color: #444;
   cursor: pointer;
   padding: 16px;
   width: 100%;
-  border: none;
+  border: 1px solid black;
   text-align: left;
   outline: none;
   font-size: 15px;
