--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .row {
   display: -webkit-flex;
   display: flex;
+  margin:0px;
 }
 
 /* Create three unequal columns that sits next to each other */
@@ -135,12 +136,15 @@ p {font-size:16px;}
 
 a:link {
   text-decoration: none;
+  color: black;
 }
 
 a:visited {
   text-decoration: none;
+  color: black;
 }
 
 a:hover {
   text-decoration: underline;
+  color: black;
 }
