--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ p {font-size:16px;}
   cursor: pointer;
   padding: 16px;
   width: 100%;
-  border: 1px solid black;
+  border: none;
   text-align: left;
   outline: none;
   font-size: 15px;
@@ -145,6 +145,6 @@ a:visited {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
   color: black;
 }
