--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ p {font-size:16px;}
 }
 
 .active, .accordion:hover {
-  background-color: #ccc;
+  background-color: #aaa;
 }
 
 .accordion:after {
