--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ p {font-size:16px;}
 
 .panel {
   padding: 0 8px;
-  background-color: #cccccc;
+  background-color: #eee;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
