--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ li a:hover {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin: 10px;
 }
 
 .button1 {border-radius: 6px; clear: left; float: left;}
