--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ li a:hover {
 h1{font-size:35px; margin:10px;}
 h2{font-size:30px;}
 h3{font-size:25px;}
-p {font-size:16px;}
+p {font-size:16px; padding:10px;}
 
 .accordion {
   background-color: #aaa;
