--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ li a:hover {
 
 .button1 {border-radius: 6px; clear: left; float: left;}
 
-#quotes {margin: 10px; padding-bottom: 20px; border: 1px red solid;}
+#quotes {margin: 10px; padding-bottom: 20px; border: 1px red solid; float: left;}
 
 #qbox {border-radius: 16px; background-color: #aaa;}
 
