--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f1f1f1;
+  min-height: 100vh;
 }
 
 /* Style the header */
