--- a/l2mu-style.css
+++ b/l2mu-style.css
@@ -3,6 +3,11 @@
   margin: 0px;
   font-family: verdana, Arial, sans-serif;
 }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f1f1f1;
+  min-height: 100vh;
+}
 
 .row::after {
   content: "";
@@ -28,23 +33,7 @@ html {
   font-size: 35px;
 }
 
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
 
-.menu li {
-  padding: 8px;
-  margin-bottom: 7px;
-  background-color: #33b5e5;
-  color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.menu li:hover {
-  background-color: #0099cc;
-}
 
 
 
