--- a/l2mu-style.css
+++ b/l2mu-style.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f1f1f1;
+  background-color: #fff;
   min-height: 100vh;
 }
 
@@ -18,10 +18,6 @@ body {
 [class*="col-"] {
   float: left;
   padding: 15px;
-}
-
-html {
-  font-family: "Lucida Sans", sans-serif;
 }
 
 
