--- a/l2mu-style.css
+++ b/l2mu-style.css
@@ -15,7 +15,7 @@
     "Footer Footer Footer";
 }
 
-.Footer { grid-area: Footer;   background-color: #f1f1f1;
+.Footer { grid-area: Footer;   background-color: #542785;
   padding: 10px;
   text-align: center;
   height: 100px;}
