--- a/l2mu-style.css
+++ b/l2mu-style.css
@@ -17,7 +17,7 @@
 
 .Footer { grid-area: Footer;   background-color: #542785;
   padding: 10px;
-  text-align: center;
+  text-align: right;
   height: 100px;
 text-color: #fff;}
 
@@ -69,7 +69,7 @@ li a:hover {
 
 /*Button*/
 .button {
-  background-color: #004de6; 
+  background-color: #542785; 
   border: none;
   color: white;
   padding: 15px 32px;
