--- a/l2mu-style.css
+++ b/l2mu-style.css
@@ -94,6 +94,7 @@ li a:hover {
 /*Button END*/
 
 #quotes {margin: 0px; padding-bottom: 20px; display: block;}
+#inspire {margin: 0px; padding-bottom: 20px; display: block;}
 	
 	
 /*Accordian*/
